--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="side-nav-menu min-vh-100 position-fixed d-flex top-0 ">
 <div class="nav-tab  d-flex flex-column justify-content-between min-vh-100 p-4  ">
   <div class="links" id="links">
-      <ul class="list-unstyled overflow-hidden">
+      <ul class="list-unstyled side-menue overflow-hidden">
           <li onclick="disSearchPage()"  class="py-2 position-relative">Search</li>
           <li onclick="getCategoryMeals()" class="py-2 position-relative ">Categories</li>
           <li onclick="getArea()" class="py-2 position-relative ">Area</li>
